--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,9 @@
         app:titleTextColor="@color/actionBarTextColor"
        style="@style/Widget.Tanmay.ActionBar"/>
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/fragments_tabs_strip"
-        style="@style/Widget.Tanmay.ActionBar" />
-
     <android.support.v4.view.ViewPager
         android:id="@+id/fragments_view_pager"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
