--- a/app/src/main/res/layout/fragment_previous_recordings.xml
+++ b/app/src/main/res/layout/fragment_previous_recordings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,21 @@
 
     <ListView
         android:id="@+id/previous_recordings_list"
-        android:width="match_parent"
-        android:height="match_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:visibility="gone" />
 
-</LinearLayout>
+    <TextView
+        android:gravity="center"
+        android:id="@+id/no_recordings_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:padding="16dp"
+        android:text="@string/no_previous_recordings_message"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:visibility="gone" />
+
+</RelativeLayout>
